--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,10 @@
 }
 
 body {
+  height: 100vh;
   font-family: "Josefin Sans", sans-serif;
+}
+
+h1 {
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
