--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,43 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 10px;
 }
 
 body {
   height: 100vh;
-  font-family: "Josefin Sans", sans-serif;
-  color: royalblue;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 2rem;
+  color: rgb(43, 63, 122);
 }
 
-.logo {
-  display: flex;
+.header-container {
+  position: relative;
+  padding: 25px;
 }
-.logo h1 {
+.header-container .logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.header-container h1 {
+  font-size: 34px;
   font-weight: bold;
+  text-transform: uppercase;
+}
+
+.navigation .navigation-items {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  background-color: rgb(43, 63, 122);
+}
+.navigation .navigation-items li {
+  color: white;
+  font-size: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 15px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
