--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,46 @@ body {
 
 .header-container {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: baseline;
 	align-items: center;
+
+	.logo {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+		min-width: 250px;
+		padding: 20px;
+
+		h1 {
+			color: rgb(36, 58, 124);
+		}
+
+		.owner-name {
+			color: rgb(36, 58, 124);
+		}
+	}
+
+	.nav {
+		width: 100%;
+		margin: 0 30px;
+		padding: 5px 5px;
+		border-radius: 50px;
+		background-color: rgb(36, 58, 124);
+
+		.nav-items {
+			display: flex;
+			justify-content: center;
+		}
+
+		a {
+			padding: 0 50px;
+			color: rgb(255, 255, 255);
+			font-weight: bold;
+			letter-spacing: 2px;
+			text-decoration: none;
+			text-transform: uppercase;
+		}
+	}
 }
