--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,13 +7,16 @@
 
 body {
 	font-family: 'Titillium Web', sans-serif;
-	font-size: 16px;
+	font-size: 14px;
 }
 
 .header-container {
 	display: flex;
 	justify-content: baseline;
 	align-items: center;
+	height: 80px;
+	background-color: rgb(175, 185, 234, 0.2);
+	overflow: hidden;
 
 	.logo {
 		display: flex;
@@ -21,37 +24,40 @@ body {
 		justify-content: center;
 		align-items: center;
 		height: 100%;
-		min-width: 250px;
-		padding: 20px;
+		min-width: 200px;
 
-		h1 {
-			color: rgb(36, 58, 124);
-		}
-
+		h1,
 		.owner-name {
+			font-size: medium;
 			color: rgb(36, 58, 124);
 		}
 	}
 
-	.nav {
+	.nav, .nav-items {
+		height: 100%;
 		width: 100%;
-		margin: 0 30px;
-		padding: 5px 5px;
-		border-radius: 50px;
-		background-color: rgb(36, 58, 124);
 
 		.nav-items {
 			display: flex;
 			justify-content: center;
+			align-items: center;
 		}
 
 		a {
-			padding: 0 50px;
-			color: rgb(255, 255, 255);
+			height: 100%;
+			padding: 50px 50px;
+			color: rgb(36, 58, 124);
 			font-weight: bold;
-			letter-spacing: 2px;
+			letter-spacing: 1px;
 			text-decoration: none;
 			text-transform: uppercase;
+			transition: 0.5s;
+			cursor: pointer;
+		}
+
+		a:hover {
+			color: rgb(255, 255, 255);
+			background-color: rgb(36, 58, 124);
 		}
 	}
 }
