Optimalization of navigation

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,6 @@ body {
 	display: flex;
 	justify-content: baseline;
 	align-items: center;
-	height: 80px;
 	background-color: rgb(175, 185, 234, 0.2);
 	overflow: hidden;
 
@@ -31,6 +30,10 @@ body {
 			font-size: medium;
 			color: rgb(36, 58, 124);
 		}
+	}
+
+	.nav {
+		padding: 20px;
 	}
 
 	.nav, .nav-items {
