--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
   display: flex;
   justify-content: baseline;
   align-items: center;
-  height: 80px;
   background-color: rgba(175, 185, 234, 0.2);
   overflow: hidden;
 }
@@ -30,6 +29,9 @@ body {
 .header-container .logo .owner-name {
   font-size: medium;
   color: rgb(36, 58, 124);
+}
+.header-container .nav {
+  padding: 20px;
 }
 .header-container .nav, .header-container .nav-items {
   height: 100%;
