--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,9 @@ body {
 	font-size: 14px;
 }
 
-.header-container, .logo, .nav-items {
+.header-container,
+.logo,
+.nav-items {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -34,26 +36,34 @@ body {
 
 	.nav {
 		padding: 20px;
-	}
 
-	.nav, .nav-items, a {
-		height: 100%;
-		width: 100%;
+		.wrapper {
+			margin: 0 auto;
+			width: 100%;
+			max-width: 1200px;
 
-		a {
-			padding: 50px 50px;
-			color: rgb(36, 58, 124);
-			font-weight: bold;
-			letter-spacing: 1px;
-			text-decoration: none;
-			text-transform: uppercase;
-			transition: 0.6s;
-			cursor: pointer;
-		}
+			.nav,
+			.nav-items,
+			a {
+				height: 100%;
+				width: 100%;
 
-		a:hover {
-			color: rgb(255, 255, 255);
-			background-color: rgb(36, 58, 124);
+				a {
+					padding: 50px 50px;
+					color: rgb(36, 58, 124);
+					font-weight: bold;
+					letter-spacing: 1px;
+					text-decoration: none;
+					text-transform: uppercase;
+					transition: 0.6s;
+					cursor: pointer;
+				}
+
+				a:hover {
+					color: rgb(255, 255, 255);
+					background-color: rgb(36, 58, 124);
+				}
+			}
 		}
 	}
 }
