--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+@use '../scss/colors' as colors;
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -6,16 +8,23 @@
 }
 
 body {
-	font-family: 'Crimson Text', serif;
+	font-family: 'Crimson Text', sans-serif;
 	font-size: 15px;
+	background-color: colors.$main-background-color;
 }
+
+.header {
+	height: 100vh;
+}
+
+// ***TOP INFO BAR***
 
 .info-bar {
 	display: flex;
 	justify-content: space-evenly;
 	width: 100%;
 	padding: 5px 10px;
-	background-color: rgb(36, 58, 124, 0.5);
+	background-color: colors.$secondary-background-color;
 
 	span,
 	a {
@@ -23,7 +32,7 @@ body {
 		text-transform: uppercase;
 		text-decoration: none;
 		padding: 5px 0;
-		color: rgb(31, 45, 90);
+		color: colors.$main-font-color;
 		font-weight: 600;
 	}
 }
@@ -33,22 +42,28 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	background-color: rgb(175, 185, 234, 0.2);
 	overflow: hidden;
+
+	a {
+		height: 100%;
+		cursor: pointer;
+
+		.logo {
+			max-width: 150px;
+			margin: 10px 10px 10px 50px;
+			padding: 10px;
+		}
+	}
 }
 
-.logo {
-	max-width: 150px;
-	height: 100%;
-	margin: 10px 10px 10px 50px;
-	padding: 10px;
-}
+// *** MOBILE HAMBURGER MENU***
 
 .burger-icon {
 	height: 100%;
 	padding: 20px 36px;
 	background: none;
 	border: none;
+	border-radius: 0 0 0 12px;
 	font-size: 20px;
 	cursor: pointer;
 	transition: background-color 0.6s;
@@ -56,13 +71,48 @@ body {
 
 .burger-icon:hover {
 	background-color: rgba(133, 140, 181, 0.149);
+	border-radius: 0 0 0 12px;
 }
 
 .nav-items {
 	display: none;
 }
 
-@media (min-width: 776px) {
+// *** HERO BANNER ***
+
+.hero-banner {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50%;
+	width: 100%;
+
+	.hero-img {
+		position: absolute;
+		height: 50%;
+		width: 50%;
+		background-image: url('../img/pawel-czerwinski--RrO7cJN_sQ-unsplash.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		border-radius: 20px;
+	}
+
+	.background-img {
+		position: absolute;
+		background-color: colors.$main-font-color;
+	}
+
+	h1 {
+		position: absolute;
+		font-size: 26px;
+		color: colors.$main-font-color;
+		text-transform: uppercase;
+		padding: 0 30px;
+	}
+}
+
+@media (min-width: 810px) {
 	.info-bar {
 		display: none;
 	}
@@ -77,19 +127,25 @@ body {
 		align-items: center;
 		width: 100%;
 
+		.nav-item {
+			margin: 0 10px;
+		}
+
 		a {
 			padding: 20px 36px;
 			text-transform: uppercase;
 			letter-spacing: 1px;
 			font-weight: 600;
 			text-decoration: none;
-			color: rgb(31, 45, 90);
-			transition: 0.6s;
+			border-radius: 0 0 12px 12px;
+			color: colors.$main-font-color;
+			transition: all 0.6s;
 		}
 
 		a:hover {
 			color: rgb(255, 255, 255);
-			background-color: rgb(31, 45, 90);
+			background-color: colors.$main-font-color;
+			border-radius: 0 0 12px 12px;
 		}
 	}
 }
