Added responsive footer

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-* {
+*,
+::after,
+::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -8,7 +10,7 @@
 body {
   font-family: "Crimson Text", sans-serif;
   font-size: 15px;
-  background-color: rgba(175, 185, 234, 0.2);
+  overflow-x: hidden;
 }
 
 .header {
@@ -37,6 +39,8 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  background-color: rgba(175, 185, 234, 0.2);
+  border-bottom: 1px solid rgb(31, 45, 90);
   overflow: hidden;
 }
 .header-container a .logo {
@@ -49,7 +53,6 @@ body {
   padding: 20px 36px;
   background: none;
   border: none;
-  border-radius: 0 0 0 12px;
   font-size: 20px;
   cursor: pointer;
   transition: background-color 0.6s;
@@ -57,7 +60,6 @@ body {
 
 .burger-icon:hover {
   background-color: rgba(133, 140, 181, 0.149);
-  border-radius: 0 0 0 12px;
 }
 
 .nav-items {
@@ -93,35 +95,94 @@ body {
   padding: 0 30px;
 }
 
+.footer-container {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(175, 185, 234, 0.2);
+  border-top: 1px solid rgb(31, 45, 90);
+}
+.footer-container .legal-rules {
+  margin: 20px;
+}
+.footer-container .legal-rules .footer-logo {
+  display: none;
+}
+.footer-container .legal-rules .legal-links {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+.footer-container .legal-rules .legal-links .legal-link {
+  margin-left: 5px;
+  padding: 10px;
+  text-decoration: none;
+  color: rgb(31, 45, 90);
+  font-weight: 400;
+  cursor: pointer;
+}
+.footer-container .legal-rules .copyright {
+  margin-left: 5px;
+  padding: 10px;
+  color: rgb(31, 45, 90);
+  font-weight: 400;
+}
+
 @media (min-width: 810px) {
   .info-bar {
     display: none;
   }
-  .burger-icon {
+  .header-container {
+    height: 62px;
+  }
+  .header-container .burger-icon {
     display: none;
   }
-  .nav-items {
+  .header-container .nav-items {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
   }
-  .nav-items .nav-item {
-    margin: 0 10px;
-  }
-  .nav-items a {
+  .header-container .nav-items a {
     padding: 20px 36px;
+    height: 62px;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 600;
     text-decoration: none;
-    border-radius: 0 0 12px 12px;
     color: rgb(31, 45, 90);
     transition: all 0.6s;
   }
-  .nav-items a:hover {
+  .header-container .nav-items a:hover {
     color: rgb(255, 255, 255);
     background-color: rgb(31, 45, 90);
-    border-radius: 0 0 12px 12px;
+  }
+  .footer-container .legal-rules {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .footer-container .legal-rules a .footer-logo {
+    display: inherit;
+    max-width: 150px;
+    left: 10px;
+    margin: 10px 50px 10px 50px;
+    padding: 10px;
+  }
+  .footer-container .legal-rules .legal-links .legal-link {
+    transition: -webkit-text-decoration;
+    transition: text-decoration;
+    transition: text-decoration, -webkit-text-decoration;
+  }
+  .footer-container .legal-rules .legal-links .legal-link:hover {
+    text-decoration: underline;
+  }
+  .footer-container .legal-rules .copyright {
+    margin-left: 50px;
+    padding: 10px;
   }
 }/*# sourceMappingURL=style.css.map */
