--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 @use '../scss/colors' as colors;
 
-* {
+*,
+::after,
+::before {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -10,14 +12,14 @@
 body {
 	font-family: 'Crimson Text', sans-serif;
 	font-size: 15px;
-	background-color: colors.$main-background-color;
+	overflow-x: hidden;
 }
 
 .header {
 	height: 100vh;
 }
 
-// ***TOP INFO BAR***
+// // ***TOP INFO BAR***
 
 .info-bar {
 	display: flex;
@@ -37,13 +39,15 @@ body {
 	}
 }
 
-// *** HEADER CONTAINER AND LOGO ***
+// // *** HEADER CONTAINER AND LOGO ***
 
 .header-container {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
+	background-color: colors.$main-background-color;
+	border-bottom: 1px solid colors.$main-font-color;
 	overflow: hidden;
 
 	a {
@@ -55,13 +59,12 @@ body {
 	}
 }
 
-// *** MOBILE HAMBURGER MENU***
+// // *** MOBILE HAMBURGER MENU***
 
 .burger-icon {
 	padding: 20px 36px;
 	background: none;
 	border: none;
-	border-radius: 0 0 0 12px;
 	font-size: 20px;
 	cursor: pointer;
 	transition: background-color 0.6s;
@@ -69,14 +72,13 @@ body {
 
 .burger-icon:hover {
 	background-color: rgba(133, 140, 181, 0.149);
-	border-radius: 0 0 0 12px;
 }
 
 .nav-items {
 	display: none;
 }
 
-// *** HERO BANNER ***
+// // *** HERO BANNER ***
 
 .hero-banner {
 	position: relative;
@@ -110,40 +112,117 @@ body {
 	}
 }
 
+// *** FOOTER ***
+
+.footer-container {
+	width: 100%;
+	height: 100%;
+	background-color: colors.$main-background-color;
+	border-top: 1px solid colors.$main-font-color;
+
+	.legal-rules {
+		margin: 20px;
+
+		.footer-logo {
+			display: none;
+		}
+
+		.legal-links {
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			justify-content: flex-start;
+			align-items: center;
+
+			.legal-link {
+				margin-left: 5px;
+				padding: 10px;
+				text-decoration: none;
+				color: colors.$main-font-color;
+				font-weight: 400;
+				cursor: pointer;
+			}
+		}
+
+		.copyright {
+			margin-left: 5px;
+			padding: 10px;
+			color: colors.$main-font-color;
+			font-weight: 400;
+		}
+	}
+}
+
 @media (min-width: 810px) {
 	.info-bar {
 		display: none;
 	}
 
-	.burger-icon {
-		display: none;
+	.header-container {
+		height: 62px;
+
+		.burger-icon {
+			display: none;
+		}
+
+		.nav-items {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+
+			a {
+				padding: 20px 36px;
+				height: 62px;
+				text-transform: uppercase;
+				letter-spacing: 1px;
+				font-weight: 600;
+				text-decoration: none;
+				color: colors.$main-font-color;
+				transition: all 0.6s;
+			}
+
+			a:hover {
+				color: rgb(255, 255, 255);
+				background-color: colors.$main-font-color;
+			}
+		}
 	}
 
-	.nav-items {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: 100%;
+	// *** FOOTER ***
 
-		.nav-item {
-			margin: 0 10px;
-		}
+	.footer-container {
+		.legal-rules {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-end;
+			align-items: center;
+			flex-wrap: wrap;
 
-		a {
-			padding: 20px 36px;
-			text-transform: uppercase;
-			letter-spacing: 1px;
-			font-weight: 600;
-			text-decoration: none;
-			border-radius: 0 0 12px 12px;
-			color: colors.$main-font-color;
-			transition: all 0.6s;
-		}
+			a {
+				.footer-logo {
+					display: inherit;
+					max-width: 150px;
+					left: 10px;
+					margin: 10px 50px 10px 50px;
+					padding: 10px;
+				}
+			}
 
-		a:hover {
-			color: rgb(255, 255, 255);
-			background-color: colors.$main-font-color;
-			border-radius: 0 0 12px 12px;
+			.legal-links {
+				.legal-link {
+					transition: text-decoration;
+				}
+
+				.legal-link:hover {
+					text-decoration: underline;
+				}
+			}
+
+			.copyright {
+				margin-left: 50px;
+				padding: 10px;
+			}
 		}
 	}
 }
