--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,69 @@
 body {
   font-family: "Crimson Text", sans-serif;
   font-size: 15px;
+  color: rgb(31, 45, 90);
   overflow-x: hidden;
 }
 
-.header {
-  height: 100vh;
+h1,
+h2,
+h3 {
+  color: rgb(31, 45, 90);
 }
 
-.info-bar {
+a {
+  text-decoration: none;
+}
+
+img {
+  height: auto;
+}
+
+button,
+select {
+  font-family: inherit;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.fixed {
+  position: fixed;
+  width: 100%;
+}
+
+.section-title {
+  margin: 0 25px;
+  padding: 25px;
+  font-size: 18px;
+  color: rgb(31, 45, 90);
+  text-transform: uppercase;
+  border-left: 5px solid rgb(31, 45, 90);
+}
+
+.privacy-policy {
+  margin: 0 25px;
+  color: rgb(31, 45, 90);
+}
+
+.contact-info {
+  width: 100%;
+}
+.contact-info .info-bar {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
   padding: 10px;
-  background-color: rgba(36, 58, 124, 0.5);
+  background-color: rgb(147, 157, 187);
 }
-.info-bar span,
-.info-bar a {
+.contact-info .info-bar span,
+.contact-info .info-bar a {
   font-size: 12px;
   text-transform: uppercase;
   text-decoration: none;
@@ -34,16 +81,19 @@ body {
   font-weight: 600;
 }
 
-.header-container {
+.nav-bar {
+  width: 100%;
+}
+.nav-bar .nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  background-color: rgba(175, 185, 234, 0.2);
+  background-color: rgb(239, 241, 250);
   border-bottom: 1px solid rgb(31, 45, 90);
   overflow: hidden;
 }
-.header-container a .logo {
+.nav-bar .nav-container a .logo {
   max-width: 150px;
   margin: 10px 10px 10px 50px;
   padding: 10px;
@@ -66,43 +116,90 @@ body {
   display: none;
 }
 
-.hero-banner {
+.header-container {
+  width: 100%;
+  height: 100vh;
+}
+
+.contact-section {
+  display: block;
+  background-color: rgb(239, 241, 250);
+}
+.contact-section .contact .contact-container {
+  margin: 0 auto;
+  padding: 0 1em;
+  width: 100%;
+  max-width: 1400px;
+}
+.contact-section .contact .contact-container .contact-wrapper {
+  margin: 0 25px;
+}
+.contact-section .contact .contact-container .contact-wrapper .brand-info {
   position: relative;
+  margin-bottom: 25px;
+  overflow: hidden;
+}
+.contact-section .contact .contact-container .contact-wrapper .brand-info .brand-details {
+  padding: 25px;
+  height: 100%;
+}
+.contact-section .contact .contact-container .contact-wrapper .brand-info .brand-details h3,
+.contact-section .contact .contact-container .contact-wrapper .brand-info .brand-details p {
+  padding: 5px;
+}
+.contact-section .contact .contact-container .contact-wrapper .contact-form {
+  display: block;
+  padding: 0 25px;
+}
+.contact-section .contact .contact-container .contact-wrapper .contact-form .contact-box {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50%;
+  flex-direction: column;
+  position: relative;
   width: 100%;
 }
-.hero-banner .hero-img {
-  position: absolute;
-  height: 50%;
-  width: 50%;
-  background-image: url("../img/pawel-czerwinski--RrO7cJN_sQ-unsplash.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 20px;
+.contact-section .contact .contact-container .contact-wrapper .contact-form .contact-box .contact-input {
+  margin-bottom: 18px;
 }
-.hero-banner .background-img {
-  position: absolute;
-  background-color: rgb(31, 45, 90);
+.contact-section .contact .contact-container .contact-wrapper .contact-form .contact-box .contact-textarea {
+  resize: vertical;
+  height: 100px;
+  min-height: 100px;
 }
-.hero-banner h1 {
-  position: absolute;
-  font-size: 26px;
+.contact-section .contact .contact-container .contact-wrapper .contact-form .contact-box .contact-input,
+.contact-section .contact .contact-container .contact-wrapper .contact-form .contact-box .contact-textarea {
+  padding: 5px;
+  background: none;
+  border: 1px solid rgb(31, 45, 90);
+  border-radius: 4px;
+  outline: none;
   color: rgb(31, 45, 90);
-  text-transform: uppercase;
-  padding: 0 30px;
+  font-family: "Crimson Text", sans-serif;
+  font-size: 16px;
+}
+.contact-section .contact .contact-container .contact-wrapper .contact-btn {
+  margin-top: 18px;
+  padding: 5px;
+  font-size: 16px;
+  width: 100%;
+  color: #fff;
+  background-color: rgb(31, 45, 90);
+  border-radius: 8px;
+}
+.contact-section .contact .contact-container .privacy-policy {
+  padding: 25px;
+}
+.contact-section .contact .contact-container .privacy-policy a {
+  font-weight: 600;
+  color: rgb(31, 45, 90);
 }
 
 .footer-container {
   width: 100%;
   height: 100%;
-  background-color: rgba(175, 185, 234, 0.2);
-  border-top: 1px solid rgb(31, 45, 90);
+  background-color: rgb(239, 241, 250);
 }
 .footer-container .legal-rules {
-  margin: 20px;
+  padding: 20px 50px;
 }
 .footer-container .legal-rules .footer-logo {
   display: none;
@@ -125,27 +222,26 @@ body {
 .footer-container .legal-rules .copyright {
   margin-left: 5px;
   padding: 10px;
-  color: rgb(31, 45, 90);
   font-weight: 400;
 }
 
 @media (min-width: 810px) {
-  .info-bar {
+  .contact-info {
     display: none;
   }
-  .header-container {
+  .nav-container {
     height: 62px;
   }
-  .header-container .burger-icon {
+  .nav-container .burger-icon {
     display: none;
   }
-  .header-container .nav-items {
+  .nav-container .nav-items {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
   }
-  .header-container .nav-items a {
+  .nav-container .nav-items a {
     padding: 20px 36px;
     height: 62px;
     text-transform: uppercase;
@@ -155,9 +251,23 @@ body {
     color: rgb(31, 45, 90);
     transition: all 0.6s;
   }
-  .header-container .nav-items a:hover {
+  .nav-container .nav-items a:hover {
     color: rgb(255, 255, 255);
     background-color: rgb(31, 45, 90);
+  }
+  .contact-wrapper {
+    display: flex;
+  }
+  .brand-info {
+    margin-bottom: 0;
+    margin-right: 25px;
+    width: 30%;
+  }
+  .contact-form {
+    width: 70%;
+  }
+  .footer-container {
+    margin: 0 auto;
   }
   .footer-container .legal-rules {
     display: flex;
@@ -184,5 +294,12 @@ body {
   .footer-container .legal-rules .copyright {
     margin-left: 50px;
     padding: 10px;
+  }
+}
+@media (min-width: 1400px) {
+  .footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }/*# sourceMappingURL=style.css.map */
