--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
 // ***BACKGROUND COLORS***
-$main-background-color: rgb(175, 185, 234, 0.2);
-$secondary-background-color: rgb(36, 58, 124, 0.5);
+$main-background-color: rgb(239, 241, 250);
+$secondary-background-color: rgb(147, 157, 187);
 
 // ***FONTS COLORS***
 $main-font-color: rgb(31, 45, 90);
